Fixed comment alignment on youtube

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -59,5 +59,5 @@ a.hover {
 }
 
 #redditImgWrap {
-  margin: 0 0 -52px 0;
+  margin: 16px 0 -52px 0;
 }
